# forward-kinematics

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
kinematics/: CMakeLists.txt
kinematics/functionaltests/: CMakeLists.txt  collision_checker_functionaltests.cpp  forward_kinematics_solver_functionaltests.cpp
kinematics/include/kinematics/: collision_checker.h  dynamic_joint_state.h  forward_kinematics_solver.h  i_collision_checker.h  i_kinematic_chain.h  joint_state.h  kinematic_chain.h  kinematic_chain_factory.h  point.h
kinematics/mock/kinematics/: collision_checker_mock.h  kinematic_chain_mock.h
kinematics/src/: collision_checker.cpp  forward_kinematics_solver.cpp  kinematic_chain_factory.cpp
kinematics/unittests/: CMakeLists.txt  joint_state_unittests.cpp
planner/: CMakeLists.txt
planner/functionaltests/: CMakeLists.txt  trajectory_planner_functionaltests.cpp
planner/include/planner/: distance_travel_time_finder.h  i_travel_time_finder.h  trajectory_planner.h
planner/mock/planner/: travel_time_finder_mock.h
planner/src/: distance_travel_time_finder.cpp  trajectory_planner.cpp
planner/unittests/: CMakeLists.txt  distance_travel_time_finder_unittests.cpp  trajectory_planner_unittests.cpp
